# tether_manager

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
launch/: simulate_imu.launch  tester.launch  turn_counter.launch.py
scripts/: tether_turn_counter.py  tether_turn_counter_2.py
src/: simulateImuOnRobot.cpp  simulate_imu.cpp  turn_counter_tester.cpp
systemd/: tether_manager.service
