<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>tether_manager</name>

    <version>1.0.0</version>

    <description>The tether_manager package contains a node counting the number of turns the robot has made since the
        beginning of its mission.
    </description>

    <author>Auguste Bourgois</author>
    <maintainer email="auguste@forssea-robotics.fr">Auguste Bourgois</maintainer>

    <license>None</license>

    <url type="repository">https://github.com/forssea-robotics/tether_manager</url>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>forssea_utilities</exec_depend>
    <exec_depend>tf_transformations</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
